Update link to repo

--- a/libary.properties
+++ b/libary.properties
@@ -5,5 +5,5 @@ maintainer=jjlondonocarrillo@gmail.com
 sentence=Library to interface the AFE4950 with Arduino for ECG and PPG signal acquisition.
 paragraph=Provides methods to control and acquire data from the AFE4950 module using an Arduino or ESP32. Supports single-channel ECG and PPG acquisition.
 category=Sensors
-url=https://github.com/jjlondonoc/AFE4950
+url=https://github.com/jjlondonoc/AFE4950-Arduino-Library
 architectures=*
