--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
 name=AFE4950
 version=1.0.0
-author=Juan Jose Londono
-maintainer=jjlondonocarrillo@gmail.com
-sentence=Library to interface the AFE4950 with Arduino for ECG and PPG signal acquisition.
-paragraph=Provides methods to control and acquire data from the AFE4950 module using an Arduino or ESP32. Supports single-channel ECG and PPG acquisition.
+author=Juan Jose Londono <jjlondonocarrillo@gmail.com>
+maintainer=Juan Jose Londono <jjlondonocarrillo@gmail.com>
+sentence=AFE4950 library for interfacing the AFE4950 biomedical sensor with Arduino compatible MCU's.
+paragraph=This library enables users to acquire ECG and PPG signals from the AFE4950 sensor using an ESP32 or Arduino. It provides configuration and data reading functions, and supports simultaneous acquisition from single-channel signals.
 category=Sensors
 url=https://github.com/jjlondonoc/AFE4950-Arduino-Library
 architectures=*
+includes=AFE4950.h
